# strong-bat-CMCMC

./: DESCRIPTION  NAMESPACE  cleanup  configure  configure.ac
R/: cmcmc.R  cmcmcopts.R  compilekernel.R  inca.R  load_target_kernel.R
inst/: inca_metrop_1gpu_sm30.cu  metrop_1gpu_sm30.cu
inst/kernels/: HierBetaBinomJoint.cu  Logistic.cu  MVNorm.cu  NneWayNormal.cu  NneWayNormalNC.cu  cmcmc_kernel.h
inst/scripts/: README.md  hier_beta_binom_joint_example.R  logistic_example.R  mvnorm_example.R  nne_way_normal_example.R  nne_way_normal_nc_example.R  smoke_logistic_d10.R
inst/scripts/legacy/: beta_binoial_rat_example.R  cmcmc_vs_inca_mvnorm.R  smoke_hier_beta_binom.R  smoke_inca_logistic_d10.R  smoke_inca_mvnorm.R  smoke_logistic_d10.R  smoke_mvnorm.R  smoke_oneway_normal_re.R  smoke_oneway_normal_re_nc.R
man/: cmcmc.Rd  cmcmcopt.Rd  inca.Rd  load_target_kernel.Rd
src/: Makevars.in  cmcmcR.c  incaR.c  init.c
src/cmcmc/: Makefile  autotune.c  autotune.h  check.h  cmcmc.c  cmcmc.h  config.h  covariance.c  covariance.h  generate_mvn.c  generate_mvn.h  inca.c  metrop.h  metrop_1gpu_sm30.c  metrop_1gpu_sm30.h  propagation_kernel.h  savesamps.c  savesamps.h  timer.h
